@@ -1,4 +1,3 @@
-//src\main\java\com\mindmate\controller\CounselorController.java
 package com.mindmate.controller;
 
 import com.mindmate.dao.AppointmentDAO;
@@ -6,9 +5,11 @@ import com.mindmate.dao.CounselorDAO;
 import com.mindmate.model.Appointment;
 import com.mindmate.model.Content;
 import com.mindmate.model.Counselor;
-import com.mindmate.util.SessionHelper; // ✅ Using Helper
+import com.mindmate.util.SessionHelper; 
 
 import jakarta.servlet.http.HttpSession;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.transaction.annotation.Transactional;
@@ -18,11 +19,12 @@ import org.springframework.web.bind.annotation.*;
 import java.time.LocalDate;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/counselor")
 public class CounselorController {
+
+    private static final Logger log = LoggerFactory.getLogger(CounselorController.class);
 
     @Autowired
     private AppointmentDAO appointmentDAO;
@@ -30,7 +32,7 @@ public class CounselorController {
     @Autowired
     private CounselorDAO counselorDAO;
 
-    // Static Content Store (Mock)
+    // Static Content Store (Kept from your original code)
     private static final Map<Long, Content> CONTENT_STORE = new LinkedHashMap<>();
     private static final AtomicLong CONTENT_ID_COUNTER = new AtomicLong(1);
 
@@ -40,11 +42,8 @@ public class CounselorController {
         CONTENT_ID_COUNTER.set(3);
     }
 
-    /**
-     * Retrieves logged-in counselor using SessionHelper.
-     */
     private Counselor getLoggedInCounselor(HttpSession session) {
-        Long userId = SessionHelper.getUserId(session); // ✅ Clean & Consistent
+        Long userId = SessionHelper.getUserId(session);
         if (userId == null || !"counselor".equals(SessionHelper.getRole(session))) {
             return null;
         }
@@ -57,13 +56,10 @@ public class CounselorController {
         if (counselor == null) return "redirect:/login";
 
         model.addAttribute("role", "counselor");
-        model.addAttribute("user", SessionHelper.getUserName(session)); // ✅ Using Helper
+        model.addAttribute("user", SessionHelper.getUserName(session));
 
-        // Fetch & Filter Appointments
-        List<Appointment> allAppointments = appointmentDAO.findAll();
-        List<Appointment> myAppointments = allAppointments.stream()
-                .filter(a -> a.getCounselorName() != null && a.getCounselorName().contains(counselor.getName()))
-                .collect(Collectors.toList());
+        // ✅ IMPROVED: Use DB Query instead of loading ALL appointments
+        List<Appointment> myAppointments = appointmentDAO.findByCounselor(counselor);
 
         // Stats
         LocalDate today = LocalDate.now();
@@ -73,14 +69,13 @@ public class CounselorController {
         model.addAttribute("todayCount", todayCount);
         model.addAttribute("pendingCount", pendingCount);
         
-        model.addAttribute("todayAppointments", myAppointments.stream()
-                .filter(a -> a.getDate().isEqual(today))
-                .collect(Collectors.toList()));
-                
+        model.addAttribute("todayAppointments", appointmentDAO.findByCounselorAndDate(counselor, today));
+        
+        // Use stream just to limit the pending list for dashboard view
         model.addAttribute("pendingAppointments", myAppointments.stream()
                 .filter(a -> a.getStatus() == Appointment.AppointmentStatus.PENDING)
                 .limit(3)
-                .collect(Collectors.toList()));
+                .toList()); // Java 16+ or use .collect(Collectors.toList())
 
         return "counselor/dashboard";
     }
@@ -92,19 +87,15 @@ public class CounselorController {
 
         model.addAttribute("role", "counselor");
 
-        List<Appointment> allAppointments = appointmentDAO.findAll();
-        List<Appointment> myAppointments = allAppointments.stream()
-                .filter(a -> a.getCounselorName() != null && a.getCounselorName().contains(counselor.getName()))
-                .collect(Collectors.toList());
+        // ✅ IMPROVED: Fetch exactly what we need
+        List<Appointment> pendingAppointments = appointmentDAO.findByCounselorAndStatus(
+                counselor, Appointment.AppointmentStatus.PENDING);
 
-        model.addAttribute("pendingAppointments", myAppointments.stream()
-                .filter(a -> a.getStatus() == Appointment.AppointmentStatus.PENDING)
-                .collect(Collectors.toList()));
+        List<Appointment> todayAppointments = appointmentDAO.findByCounselorAndDate(
+                counselor, LocalDate.now());
 
-        model.addAttribute("todayAppointments", myAppointments.stream()
-                .filter(a -> a.getDate().isEqual(LocalDate.now()))
-                .collect(Collectors.toList()));
-
+        model.addAttribute("pendingAppointments", pendingAppointments);
+        model.addAttribute("todayAppointments", todayAppointments);
         model.addAttribute("selectedDate", LocalDate.now().toString());
 
         return "counselor/schedule";
@@ -113,28 +104,61 @@ public class CounselorController {
     @PostMapping("/appointment/approve")
     @Transactional
     public String approveAppointment(@RequestParam Long appointmentId, HttpSession session) {
-        if (getLoggedInCounselor(session) == null) return "redirect:/login";
+        Counselor counselor = getLoggedInCounselor(session);
+        if (counselor == null) return "redirect:/login";
 
-        Appointment apt = appointmentDAO.findById(appointmentId);
-        if (apt != null) {
-            apt.setStatus(Appointment.AppointmentStatus.CONFIRMED);
-            appointmentDAO.update(apt);
+        try {
+            Appointment apt = appointmentDAO.findById(appointmentId);
+            
+            // ✅ Validation: Exists + Belongs to this counselor + Is Pending
+            if (apt != null && 
+                apt.getCounselor() != null && 
+                apt.getCounselor().getId().equals(counselor.getId()) &&
+                apt.getStatus() == Appointment.AppointmentStatus.PENDING) {
+                
+                apt.setStatus(Appointment.AppointmentStatus.CONFIRMED);
+                appointmentDAO.update(apt);
+                log.info("Counselor {} approved Appointment {}", counselor.getId(), appointmentId);
+            }
+        } catch (Exception e) {
+            log.error("Error approving appointment", e);
         }
         return "redirect:/counselor/schedule";
     }
 
     @PostMapping("/appointment/deny")
     @Transactional
-    public String denyAppointment(@RequestParam Long appointmentId, HttpSession session) {
-        if (getLoggedInCounselor(session) == null) return "redirect:/login";
+    public String denyAppointment(
+            @RequestParam Long appointmentId, 
+            @RequestParam(required = false) String reason, // ✅ NEW: Reason param
+            HttpSession session) {
+        
+        Counselor counselor = getLoggedInCounselor(session);
+        if (counselor == null) return "redirect:/login";
 
-        Appointment apt = appointmentDAO.findById(appointmentId);
-        if (apt != null) {
-            apt.setStatus(Appointment.AppointmentStatus.CANCELLED);
-            appointmentDAO.update(apt);
+        try {
+            Appointment apt = appointmentDAO.findById(appointmentId);
+            
+            // ✅ Validation
+            if (apt != null && 
+                apt.getCounselor() != null && 
+                apt.getCounselor().getId().equals(counselor.getId()) &&
+                apt.getStatus() == Appointment.AppointmentStatus.PENDING) {
+                
+                apt.setStatus(Appointment.AppointmentStatus.CANCELLED);
+                apt.setDenialReason(reason != null ? reason : "No reason provided");
+                appointmentDAO.update(apt);
+                log.info("Counselor {} denied Appointment {}", counselor.getId(), appointmentId);
+            }
+        } catch (Exception e) {
+            log.error("Error denying appointment", e);
         }
         return "redirect:/counselor/schedule";
     }
+
+    // ==========================================
+    // EXISTING CONTENT & PROFILE METHODS (UNCHANGED)
+    // ==========================================
 
     @GetMapping("/content")
     public String manageContent(Model model, HttpSession session) {
